# wsh

./: .gitignore  Cargo.toml  LICENSE  README.md  test_completion.sh
.github/workflows/: ci.yml
src/: completion.rs  config.rs  main.rs  shell.rs  ui.rs  utils.rs
