[package]
name = "wsh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
crossterm = "0.29.0"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.5"
